# SuMa

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: default.xml  vlp16_example.xml
src/: genvideo.cpp
src/core/: Frame.h  Frame2Model.cpp  Frame2Model.h  ImagePyramidGenerator.cpp  LieGaussNewton.cpp  Objective.h  Posegraph.cpp  Posegraph.h  Preprocessing.cpp  Preprocessing.h  Surfel.h  SurfelMap.cpp  SurfelMap.h  SurfelMapping.cpp  SurfelMapping.h
src/io/: KITTIReader.cpp  KITTIReader.h  SimulationReader.h
src/rv/: Laserscan.cpp  Laserscan.h  Stopwatch.cpp
src/shader/: Frame2Model_jacobians.frag  Frame2Model_jacobians.geom  avg_vertexmap.frag  bilateral_filter.frag  coloredvertices.frag  coloredvertices.vert  copy_surfels.geom  copy_surfels.vert  draw_depthimg.frag  draw_mesh.frag  draw_mesh.vert  draw_normalmap.frag  draw_normalmap3d.geom  draw_normalmap3d.vert  draw_posegraph_edge.geom  draw_residuals.frag  draw_submaps.geom  draw_submaps.vert  draw_surfelPoints.vert  draw_surfels.frag  draw_surfels.geom  draw_surfels.vert  draw_surfels_coords.geom  draw_vertexmap3d.vert  extract_surfels.vert  gen_depthimg.frag  gen_depthimg.vert  gen_indexmap.frag  gen_indexmap.vert  gen_normalmap.frag  gen_surfels.frag  gen_surfels.geom  gen_surfels.vert  gen_surfels330.geom  gen_vertexmap.frag  gen_vertexmap.vert  init_depthimg.frag  init_radiusConf.frag  init_radiusConf.vert  laserscan.frag  (+8 more)
src/util/: Log.h  kitti_utils.h
src/visualizer/: GraphWidget.cpp  GraphWidget.h  ViewportWidget.cpp  ViewportWidget.h  VisualizerWindow.cpp  VisualizerWindow.h  visualizer.cpp  visualizer.ui
test/: CMakeLists.txt  result_poses.txt  test_helpers.h
test/core/: CalibTest.cpp  EvalTest.cpp  PosegraphTest.cpp  PyramidTest.cpp  lie_test.cpp  matrix.cpp
test/opengl/: depthimg-test.cpp  icp-test.cpp  jacobian-test.cpp  main-opengl.cpp  ndc.frag  ndc.vert  pix2ndc.frag  pix2ndc.vert  rounding.frag  rounding.vert  rounding_access.frag  rounding_access_rect.frag  test.frag  testNDC.cpp
test/rv/: fileutil-test.cpp  geometry-test.cpp  math-test.cpp  parameter-test.cpp  parameterlist-test.cpp  parameterlistiterator-test.cpp  transform-test.cpp  xml-test.cpp
